# silly_little_creature

./: .gitignore  Cargo.toml  README.md  rhbhdsf.md
src/: aware.rs  game.rs  main.rs  render.rs  util.rs
src/assets/text/: text.kra
src/aware/: creature.rs  ext_window.rs  hiding.rs
src/render/: glrs.rs  image_asset.rs  renderer.rs  sprite.rs
src/render/shader/: sprite.fsh  sprite.vsh
