[package]
name = "silly_little_creature"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glfw = "0.55.0"

image = "0.25.1"
imageproc = "0.24.0"

win-screenshot = "4.0.8"
windows = { version = "0.56.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }

rand = "0.8.5"
